--- a/package.json
+++ b/package.json
@@ -23,13 +23,15 @@
     ]
   },
   "dependencies": {
+    "electron": "^17.2.0",
+    "electron-store": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "shared": "^1.0.0",
     "styled-components": "^5.3.3",
-    "zustand": "^3.7.0",
-    "electron": "^17.2.0"
+    "winston": "^3.7.2",
+    "zustand": "^3.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
@@ -70,7 +72,7 @@
     "prod:main": "webpack --config main.config.js --env isProduction --node-env production",
     "prod:preload": "webpack --config preload.config.js --env isProduction --node-env production",
     "prod:renderer": "webpack --config renderer.config.js --env isProduction --node-env production",
-    "dev:electron" : "yarn dev:main && yarn dev:preload",
+    "dev:electron": "yarn dev:main && yarn dev:preload",
     "dev:main": "webpack --config main.config.js --node-env development",
     "dev:preload": "webpack --config preload.config.js --node-env development",
     "dev:renderer": "webpack --config renderer.config.js --node-env development",
@@ -80,5 +82,5 @@
     "dev:all": "yarn prod:renderer && yarn dev:main && yarn dev:preload",
     "package:win32": "electron-builder build --win --ia32",
     "package:win64": "electron-builder build --win --x64"
-  }  
+  }
 }
