--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "win": {
       "target": "nsis"
     },
-    "icon": "public/with-rounded-background.ico",
+    "icon": "public/icon.ico",
     "nsis": {
       "oneClick": true
     },
@@ -23,7 +23,6 @@
     ]
   },
   "dependencies": {
-    "electron": "^17.2.0",
     "electron-store": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -34,6 +33,7 @@
     "zustand": "^3.7.0"
   },
   "devDependencies": {
+    "electron": "^17.2.0",
     "@babel/core": "^7.17.5",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
