--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "desktop-template",
+  "name": "auto-telegram-bot",
   "version": "1.0.0",
   "main": "build/main.js",
   "license": "MIT",
@@ -23,20 +23,22 @@
     ]
   },
   "dependencies": {
+    "@nut-tree/nut-js": "^2.1.1",
+    "@nut-tree/template-matcher": "^1.0.1",
     "electron-store": "^8.0.1",
+    "node-telegram-bot-api": "^0.57.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
-    "shared": "^1.0.0",
     "styled-components": "^5.3.3",
     "winston": "^3.7.2",
     "zustand": "^3.7.0"
   },
   "devDependencies": {
-    "electron": "^17.2.0",
     "@babel/core": "^7.17.5",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
+    "@types/node-telegram-bot-api": "^0.57.1",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "@types/styled-components": "^5.1.23",
@@ -46,6 +48,7 @@
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^10.2.0",
     "css-loader": "^6.5.1",
+    "electron": "13.6.2",
     "electron-builder": "^22.14.13",
     "eslint": "^8.4.1",
     "eslint-config-airbnb": "^19.0.2",
